# capstone-public

./: README.md
api/: .coveragerc  .gitignore  README.md  alembic.ini  pyproject.toml
api/api/: __init__.py  api_models.py  async_jobs.py  config.py  custom_db_types.py  custom_responses.py  db.py  db_models.py  depends.py  log_config.py  main.py  models.py
api/api/alembic/: env.py  script.py.mako
api/api/routes/: api_test_plans.py  api_test_session.py  devices.py  execution_plans.py  health.py  projects.py
api/api/services/: api_test_plan_service.py  api_test_session_service.py  device_service.py  helpers.py  orm_update_listener.py  project_service.py
api/scripts/: custom_openapi.py  gen_migration_rev.sh  gen_openapi.sh  migrate.sh  run.sh  test.sh
api/tests/: conftest.py
api/tests/integration/: conftest.py
api/tests/unit/: conftest.py  test_async_jobs.py
core/: .coveragerc  .gitignore  README.md  gen_docs.py  pyproject.toml  pytest.ini
core/core/: async_socket.py  hasher.py  socket.py  xc_project.py
core/core/app/: info_plist.py  xc_app.py
core/core/codec/: codec_protocol.py  json_codec.py  socket_json_codec.py
core/core/common/: async_wrapper.py  plist_reader.py  timedelta_converter.py  timeout.py
core/core/device/: i_device.py  i_device_manager.py  i_services.py  services_protocol.py
core/core/exceptions/: common.py  i_device.py  socket.py  tunnel_connect.py  xcodebuild.py  xctest.py  xctestrun.py
core/core/subprocesses/: process.py  tunnel_server_command.py  tunnel_server_executable.py  xcodebuild.py  xcodebuild_command.py  xcresult_command.py  xctrace_command.py
core/core/test_session/: execution_plan.py  metrics.py  plan.py  session.py  session_state.py  session_step_hasher.py  test_plan.py  xctest.py  xctestrun.py  xctestrun_parser.py  xctrace.py
core/core/tunnel/: client.py  interface.py  server.py  server_command.py  server_exceptions.py  (+1 more)
core/scripts/: generate_models.sh  test_all.sh
core/tests/: conftest.py
(+251 files in other folders)
