[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Marvin Willms <marvin.willms@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pymobiledevice3 = "^4.14.16"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
