[tool.poetry]
name = "core"
version = "0.1.0"
description = "Core implementation of the project"
authors = ["Marvin Willms <marvin.willms@code.berlin>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.13"
pymobiledevice3 = "^4.14.16"
pydantic = "^2.9.2"
pyzmq = "^26.2.0"
mmh3 = "^5.0.1"
xmltodict = "^0.14.2"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.1"
black = "^24.10.0"
datamodel-code-generator = "^0.26.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
